--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
         "axios": "^1.1.3",
+        "bodega": "file:..",
         "bootstrap": "^5.2.2",
         "cdbreact": "^1.5.3",
         "formik": "^2.2.9",
