--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "type": "module",
     "scripts": {
         "dev": "nodemon server/src/index.js --ignore client",
-        "build": "npm run build --prefix client",
-        "start": "node server"
+        "build": "npm install --prefix client && npm run build --prefix client",
+        "start": "node server/src/"
     },
     "keywords": [],
     "author": "",
